Added start and collab pages and images

--- a/start.html
+++ b/start.html
@@ -28,12 +28,13 @@
 	<body>
 	<div id="mapWrapper">
 			
-			<div id="pairprogram">
+			<div id="pairprogram" align="center">
 				<img alt="" src="images/Seema.JPG">
 				<img alt="" src="images/Progressbar.JPG">
 				<img alt="" src="images/Suman.JPG">
-				<div><h2> <font color="red">Round 3</font><h2></div>
-				</div>
+				<div align="center"><a href="collab.html"><img alt="" src="images/round3.png" style="height:300px;width:300px"></a></div>
+				
+			</div>
 
 	</div>
 	
