Added small girla nd boy images

--- a/collab.html
+++ b/collab.html
@@ -29,10 +29,10 @@
 	<div id="mapWrapper">
 			
 			<div id="pairprogram" align="center">
-				<img alt="" src="images/Seema.JPG">
+				<img alt="" src="images/14Boy.JPG">
 				<img alt="" src="images/Progressbar.JPG">
-				<img alt="" src="images/Suman.JPG">
-				<img alt="" src="images/skype4.png">
+				<img alt="" src="images/10Girl.JPG">
+				<img alt="" src="images/skype5.jpg">
 				</div>
 
 	</div>
