--- a/end.html
+++ b/end.html
@@ -29,10 +29,10 @@
 	<div id="mapWrapper">
 			
 			<div id="pairprogram" align="center">
-				<img alt="" src="images/Seema.JPG">
+				<img alt="" hspace="50pixels" src="images/14Boy.JPG">
 				
-				<img alt="" src="images/Suman.JPG">
-				
+				<img alt="" hspace="50pixels" src="images/10Girl.JPG"></br>
+				<img alt="" src="images/winner-win.JPG">
 				</div>
 
 	</div>
