--- a/start.html
+++ b/start.html
@@ -29,9 +29,9 @@
 	<div id="mapWrapper">
 			
 			<div id="pairprogram" align="center">
-				<img alt="" src="images/Seema.JPG">
+				<img alt="" src="images/14Boy.JPG">
 				<img alt="" src="images/Progressbar.JPG">
-				<img alt="" src="images/Suman.JPG">
+				<img alt="" src="images/10Girl.JPG">
 				<div align="center"><a href="collab.html"><img alt="" src="images/round3.png" style="height:300px;width:300px"></a></div>
 				
 			</div>
