--- a/collab.html
+++ b/collab.html
@@ -45,7 +45,7 @@
 				<img alt="" src="images/14Boy.JPG">
 				<img alt="" src="images/Progressbar.JPG">
 				<img alt="" src="images/10Girl.JPG">
-				<img alt="" src="images/skype5.jpg">
+				<a href="answer.html"><img alt="" src="images/skype5.jpg"/></a>
 				</div>
 
 	</div>
