--- a/end.html
+++ b/end.html
@@ -31,9 +31,13 @@
 			<div id="pairprogram" align="center">
 				<img alt="" hspace="50pixels" src="images/14Boy.JPG">
 				
-				<img alt="" hspace="50pixels" src="images/10Girl.JPG"></br>
+				<img alt="" hspace="50pixels" src="images/10Girl.JPG">
+				</div>
+				<div align="center">
 				<img alt="" src="images/winner-win.JPG">
 				</div>
+				<br/>
+				<div align="center"><img src="images/share.jpg"/></div>
 
 	</div>
 	
