--- a/start.html
+++ b/start.html
@@ -47,7 +47,7 @@
 				<img alt="" src="images/14Boy.JPG">
 				<img alt="" src="images/Progressbar.JPG">
 				<img alt="" src="images/10Girl.JPG">
-				<div align="center"><a href="collab.html"><img alt="" src="images/round3.png" style="height:300px;width:300px"></a></div>
+				<div align="center"><a href="questionPage.html"><img alt="" src="images/round3.png" style="height:300px;width:300px"></a></div>
 				
 			</div>
 
