dded bootstrap changes

--- a/questionPage.html
+++ b/questionPage.html
@@ -79,7 +79,7 @@
 							
 			</div>
 			<div class="row" align="center">
-			<a href=end.html  class="btn btn-clear btn-lg">
+			<a href=answer.html  class="btn btn-clear btn-lg">
   Submit
 </button>
 <a href=collab.html class="btn btn-default btn-lg" >
