--- a/start.html
+++ b/start.html
@@ -44,9 +44,15 @@
 	<div id="mapWrapper">
 			
 			<div id="pairprogram" align="center">
-				<img alt="" src="images/14Boy.JPG">
-				<img alt="" src="images/Progressbar.JPG">
-				<img alt="" src="images/10Girl.JPG">
+				<div class="row">
+  <div class="col-md-4"><img alt="" src="images/14Boy.JPG"></div>
+  <div class="col-md-4"><br/><div class="progress">
+  <div align="center" class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+    <span class="sr-only">60% Complete</span>
+  </div>
+</div></div>
+  <div class="col-md-4"><img alt="" src="images/10Girl.JPG"></div>
+</div>
 				<div align="center"><a href="questionPage.html"><img alt="" src="images/round3.png" style="height:300px;width:300px"></a></div>
 				
 			</div>
